--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <body>
      <div class="video-container">
 
-        <video  controls autoplay> </video>
-        
+        <video   autoplay> </video>
+
      </div>
 
+     <button id="record"> Record Video </button>
 
 
     <script src="./script.js"></script>
