--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
      </div>
 
      <button id="record"> Record Video </button>
+     <button id="download"> Download</button>
+     <button id="capture">Capture</button>
 
 
     <script src="./script.js"></script>
