--- a/index.html
+++ b/index.html
@@ -13,10 +13,17 @@
         <video   autoplay> </video>
 
      </div>
-
-     <button id="record"> Record Video </button>
-     <button id="download"> Download</button>
-     <button id="capture">Capture</button>
+   
+     <div class="controls">
+     <div id="record"> 
+         <div class="inner-record"></div>
+    </div>
+     <!-- <button id="download">  Download Recorded Video</button> -->
+     
+     <div id="capture">
+          <div class="inner-capture"></div>
+       </div>
+    </div>
 
 
     <script src="./script.js"></script>
