--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PepSnap</title>
     <link rel="stylesheet" href="style.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
      <div class="video-container">
@@ -29,6 +33,15 @@
 
 
      <div class="controls">
+        <div class="zoom">
+            <div class="zoomIn">
+              <i class="fas fa-plus"></i>
+            </div>
+            <div class="zoomOut">
+              <i class="fas fa-minus"></i>
+            </div>
+          </div>
+          
      <div id="record"> 
          <div class="inner-record"></div>
     </div>
