--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
      <div id="capture">
           <div class="inner-capture"></div>
        </div>
+
+       <div class="gallery-btn">
+               Gallery 
+       </div>
     </div>
 
      <script src="./db.js"></script>
